Adjusted environment.json to try tests
