# swagger_server/swagger/swagger.yaml
@@ -104,16 +104,22 @@ components:
           type: string
         student_id:
           type: number
-        gradeRecord:
-          $ref: '#/components/schemas/GradeRecord'
+        gradeRecords:
+          type: array
+          items:
+            type: object
+            format: GradeRecord
       example:
         last_name: last_name
-        student_id: 0.80082819046101150206595775671303272247314453125
+        student_id: 0.8008281904610115
         first_name: first_name
-        gradeRecord:
+        gradeRecords:
           grade: 6.0274563
           subject_name: subject_name
-    gradeRecord:
+    GradeRecord:
+      required:
+      - grade
+      - subject_name
       type: object
       properties:
         subject_name:
